--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -15,7 +15,7 @@ ext.mainProject = "APPTest"
  * 当前如果全量填"RouterAnnotation,Router,LibAndroid,LibThread,LibRequest,LibSqlite,LibAAF,Application,Framework"
  *
  */
-ext.developModule = "Application"
+ext.developModule = "LibViewExt"
 
 /**
  * 是否将所有依赖了 developModule 的模块都加载进来。
@@ -34,7 +34,7 @@ ext.pubModuleIsApplication = false
 /**
  * 组件所有模块的最新版本，下次发布时使用
  */
-ext.moduleVersionName = "3.9.1"
+ext.moduleVersionName = "3.9.2"
 
 /************************************ 组件化开发常用配置 ************************************/
 
@@ -427,7 +427,7 @@ ext.moduleInfo = [
                 "artifactId"         : "lib-view-ext",
                 "apidependenciesList": [
                         "com.android.support:support-v4:${project.android_support_version}",
-                        "LibCommonUIUtils"
+                        "LibCommonUIUtils","LibText"
                 ]
         ],
         "LibWebview"                : [
