--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -15,7 +15,7 @@ ext.mainProject = "APPTest"
  * 当前如果全量填"RouterAnnotation,Router,LibAndroid,LibThread,LibRequest,LibSqlite,LibAAF,Application,Framework"
  *
  */
-ext.developModule = "Framework"
+ext.developModule = "LibFile"
 
 /**
  * 是否将所有依赖了 developModule 的模块都加载进来。
@@ -58,6 +58,7 @@ ext.moduleInfo = [
                 "apidependenciesList"    : [
                         "CommonPraise", "CommonFeedback", "CommonWebview", "CommonNetwork", "CommonSplash",
                         "CommonPhotos",
+                        "Framework",
                         'com.squareup.okhttp3:okhttp:3.9.1',
                         'com.squareup.okhttp3:logging-interceptor:3.8.0',
                         'com.squareup.retrofit2:retrofit:2.4.0',
@@ -363,7 +364,7 @@ ext.moduleInfo = [
                         "com.android.support:support-annotations:${project.android_support_version}",
                         "com.android.support:support-v4:${project.android_support_version}",
                         "com.android.support:recyclerview-v7:${project.android_support_version}",
-                        "LibCommonUIUtils","LibText"
+                        "LibCommonUIUtils", "LibText"
                 ]
         ],
         "LibRefresh"                : [
@@ -377,7 +378,7 @@ ext.moduleInfo = [
         "LibToast"                  : [
                 "version"            : "3.9.0",
                 "artifactId"         : "lib-toast",
-                "apidependenciesList": ["LibThread","LibText"]
+                "apidependenciesList": ["LibThread", "LibText"]
         ],
         "LibImage"                  : [
                 "version"            : "3.8.3",
@@ -427,7 +428,7 @@ ext.moduleInfo = [
                 "artifactId"         : "lib-view-ext",
                 "apidependenciesList": [
                         "com.android.support:support-v4:${project.android_support_version}",
-                        "LibCommonUIUtils","LibText"
+                        "LibCommonUIUtils", "LibText"
                 ]
         ],
         "LibWebview"                : [
